[gd_scene load_steps=14 format=4 uid="uid://cfbmqa7obgsfi"]

[ext_resource type="Script" path="res://Scripts/Levels/world_2D_boat.gd" id="1_5450p"]
[ext_resource type="TileSet" uid="uid://cic51s6hixm0i" path="res://Resources/Tilesets/Boat.tres" id="2_head3"]
[ext_resource type="Script" path="res://Scripts/Interactables/interacting_boat.gd" id="3_aupp7"]
[ext_resource type="PackedScene" uid="uid://elcaxoggdr0h" path="res://Scenes/Interactables/interact_area.tscn" id="4_2acdp"]
[ext_resource type="Script" path="res://Scripts/Interactables/interact_portal.gd" id="5_c8fww"]
[ext_resource type="Texture2D" uid="uid://ct376qpu81hkk" path="res://Images/boattiles.png" id="6_qi7ru"]
[ext_resource type="PackedScene" uid="uid://culxx5pu21pj6" path="res://Scenes/Utility/control_E_label.tscn" id="7_s6mbl"]
[ext_resource type="Script" path="res://Scripts/Interactables/interact_ui.gd" id="8_ghmje"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o1vmr"]
size = Vector2(15.7738, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro8mw"]
atlas = ExtResource("6_qi7ru")
region = Rect2(144, 96, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bn2ie"]
size = Vector2(12, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_blmjs"]
atlas = ExtResource("6_qi7ru")
region = Rect2(176, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3xu1"]
atlas = ExtResource("6_qi7ru")
region = Rect2(16, 16, 16, 16)

[node name="StorageRoom" type="Node2D" node_paths=PackedStringArray("interactables")]
script = ExtResource("1_5450p")
interactables = NodePath("interactables")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(224, 80)
format = 2

[node name="Background" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AADz//z/AAAHAAAAAAD0//z/AAAHAAAAAAD+//3/AAAJAAAAAAD6//3/AAAJAAAAAAD8//3/AAAHAAAAAAD5//3/AAAHAAAAAADz//7/AAAHAAAAAAD0//7/AAAHAAAAAAD6//z/AAAJAAAAAAD2//3/AAAHAAAAAAD3//7/AAAHAAAAAAD5//7/AAAHAAAAAAD7//3/AAAJAAAAAAD9//3/AAAJAAAAAAD9//7/AAAJAAAAAAD8//7/AAAHAAAAAAD3//3/AAAJAAAAAAD4//3/AAAHAAAAAAD4//7/AAAJAAAAAAD+//z/AAAJAAAAAAD9//z/AAAJAAAAAAD8//z/AAAHAAAAAAD7//z/AAAJAAAAAAD2//7/AAAHAAAAAAD///7/AAAHAAAAAAAAAP7/AAAHAAAAAAABAP7/AAAJAAAAAAABAP3/AAAJAAAAAAABAPz/AAAJAAAAAAAAAPz/AAAHAAAAAAD///z/AAAJAAAAAAD5//z/AAAJAAAAAAD4//z/AAAJAAAAAAD3//z/AAAJAAAAAAD2//z/AAAJAAAAAAD1//z/AAAJAAAAAADz//3/AAAGAAAAAAD1//7/AAAHAAAAAAD///3/AAAJAAAAAAAAAP3/AAAJAAAAAAD1//3/AAAJAAAAAAD0//3/AAAJAAAAAADz////AAAGAAIAAAD0////AAAGAAIAAAD1////AAAGAAIAAAD2////AAAGAAIAAAD3////AAAGAAIAAAD4////AAAGAAIAAAD5////AAAGAAIAAAD6////AAAGAAIAAAD7////AAAGAAIAAAD8////AAAGAAIAAAD9////AAAGAAIAAAD+////AAAGAAIAAAD/////AAAGAAIAAAAAAP//AAAGAAIAAAABAP//AAAGAAIAAAD+//7/AAAHAAAAAAD6//7/AAAHAAAAAAD7//7/AAAHAAAAAAA=")
tile_set = ExtResource("2_head3")

[node name="Walls" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAD//wAAAAABAAIAAAAAAAAAAAABAAIAAAABAAAAAAABAAIAAAD+/wAAAAABAAIAAAD9/wAAAAABAAIAAAACAAAAAAACAAIAAAACAP//AAACAAEAAAACAP7/AAACAAEAAAACAP3/AAACAAEAAADy//z/AAAAAAEAAADy//3/AAAAAAEAAADy//7/AAAAAAEAAADy////AAAAAAEAAADy/wAAAAAAAAIAAADz/wAAAAABAAIAAAD0/wAAAAABAAIAAAD1/wAAAAABAAIAAAD2/wAAAAABAAIAAAD3/wAAAAABAAIAAAD4/wAAAAABAAIAAAD5/wAAAAABAAIAAAD6/wAAAAABAAIAAAD7/wAAAAABAAIAAAD8/wAAAAABAAIAAADy//v/AAAAAAAAAADz//v/AAABAAAAAAD0//v/AAABAAAAAAD1//v/AAABAAAAAAD2//v/AAABAAAAAAD3//v/AAABAAAAAAD4//v/AAABAAAAAAD5//v/AAABAAAAAAD6//v/AAABAAAAAAD7//v/AAABAAAAAAD8//v/AAABAAAAAAD9//v/AAABAAAAAAD+//v/AAABAAAAAAD///v/AAABAAAAAAAAAPv/AAABAAAAAAABAPv/AAABAAAAAAACAPv/AAACAAAAAAACAPz/AAACAAEAAAA=")
tile_set = ExtResource("2_head3")

[node name="interactables" type="Node2D" parent="."]
position = Vector2(224, 80)
script = ExtResource("3_aupp7")

[node name="door_storage_room" parent="interactables" node_paths=PackedStringArray("label") instance=ExtResource("4_2acdp")]
position = Vector2(-184, -16)
script = ExtResource("5_c8fww")
label = NodePath("popupLabel")

[node name="CollisionShape2D" parent="interactables/door_storage_room/interactArea2D" index="0"]
shape = SubResource("RectangleShape2D_o1vmr")

[node name="Sprite2D" type="Sprite2D" parent="interactables/door_storage_room"]
texture = SubResource("AtlasTexture_ro8mw")

[node name="popupLabel" parent="interactables/door_storage_room" instance=ExtResource("7_s6mbl")]
position = Vector2(-3.8147e-06, -20)

[node name="chest" parent="interactables" node_paths=PackedStringArray("label") instance=ExtResource("4_2acdp")]
position = Vector2(-143, -9)
script = ExtResource("8_ghmje")
label = NodePath("popupLabel")

[node name="CollisionShape2D" parent="interactables/chest/interactArea2D" index="0"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_bn2ie")

[node name="Sprite2D" type="Sprite2D" parent="interactables/chest"]
position = Vector2(0, 1)
texture = SubResource("AtlasTexture_blmjs")

[node name="popupLabel" parent="interactables/chest" instance=ExtResource("7_s6mbl")]
position = Vector2(9.53674e-07, -11)

[node name="Black" type="Parallax2D" parent="."]
z_index = -4096
scroll_scale = Vector2(0.9, 0.9)
repeat_size = Vector2(272, 96)
repeat_times = 8
follow_viewport = false

[node name="Sprite2D" type="Sprite2D" parent="Black"]
position = Vector2(136, 48)
scale = Vector2(17, 6)
texture = SubResource("AtlasTexture_u3xu1")

[editable path="interactables/door_storage_room"]
[editable path="interactables/chest"]
