[gd_scene load_steps=11 format=3 uid="uid://cedftdbpphn"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_s1xxa"]
[ext_resource type="PackedScene" uid="uid://bxtef406sl7a3" path="res://Scenes/player.tscn" id="1_xlduq"]
[ext_resource type="PackedScene" uid="uid://cwfk75spsv157" path="res://Scenes/Levels/world2d/inside.tscn" id="3_1y6ot"]
[ext_resource type="Script" path="res://Scripts/Levels/world_2D_boat.gd" id="3_hsvns"]
[ext_resource type="Script" path="res://Scripts/Interactables/interacting_boat.gd" id="6_hbabu"]
[ext_resource type="PackedScene" uid="uid://bbo1317tc3udw" path="res://Scenes/Levels/world2d/outside.tscn" id="7_o1mud"]
[ext_resource type="Script" path="res://Scripts/Interactables/interact_portal.gd" id="7_qpiww"]
[ext_resource type="PackedScene" uid="uid://h5bny70g3ojw" path="res://Scenes/Interactables/portal_destination.tscn" id="9_eu83q"]
[ext_resource type="PackedScene" uid="uid://d4evupfppdkg2" path="res://Scenes/Levels/worldui/Fishing Game/fishing_level.tscn" id="10_bu8ed"]
[ext_resource type="PackedScene" uid="uid://daniqccksjmtu" path="res://Scenes/Levels/worldui/cupboard_storage.tscn" id="10_lyenv"]

[node name="Game" type="Node" node_paths=PackedStringArray("level_Outside", "level_Inside", "level_Storage", "level_Fishing", "world_2D", "world_ui", "player")]
process_mode = 3
script = ExtResource("1_s1xxa")
level_Outside = NodePath("world_2D/Outside")
level_Inside = NodePath("world_2D/Inside")
level_Storage = NodePath("world_ui/Cupboard")
level_Fishing = NodePath("world_ui/Fishing")
world_2D = NodePath("world_2D")
world_ui = NodePath("world_ui")
player = NodePath("world_2D/Player")

[node name="world_2D" type="Node" parent="."]

[node name="Inside" parent="world_2D" node_paths=PackedStringArray("interactables", "camera") instance=ExtResource("3_1y6ot")]
position = Vector2(-440, -64)
script = ExtResource("3_hsvns")
interactables = NodePath("interactables")
camera = NodePath("../Player/Camera2D")

[node name="interactables" parent="world_2D/Inside" index="1"]
script = ExtResource("6_hbabu")

[node name="door_outside" parent="world_2D/Inside/interactables" index="0" node_paths=PackedStringArray("destination")]
script = ExtResource("7_qpiww")
destination = NodePath("PortalDestination")

[node name="PortalDestination" parent="world_2D/Inside/interactables/door_outside" index="2" instance=ExtResource("9_eu83q")]
position = Vector2(156, 0)

[node name="door_storage" parent="world_2D/Inside/interactables" index="1"]
script = ExtResource("7_qpiww")

[node name="door_kitchen" parent="world_2D/Inside/interactables" index="2"]
script = ExtResource("7_qpiww")

[node name="door_bedroom" parent="world_2D/Inside/interactables" index="3"]
script = ExtResource("7_qpiww")

[node name="Parallax2D" parent="world_2D/Inside" index="2"]
scroll_offset = Vector2(696, 132)
repeat_times = 1

[node name="Sprite2D" parent="world_2D/Inside/Parallax2D" index="0"]
position = Vector2(1136, 460)
scale = Vector2(71.75, 40.75)

[node name="Outside" parent="world_2D" node_paths=PackedStringArray("camera") instance=ExtResource("7_o1mud")]
camera = NodePath("../Player/Camera2D")

[node name="PortalDestination" parent="world_2D/Outside/interactables/door_inside" index="2"]
position = Vector2(-164, 8)

[node name="Node2D" parent="world_2D/Outside" index="3"]
position = Vector2(200, -16)

[node name="Player" parent="world_2D" instance=ExtResource("1_xlduq")]
z_index = 2
position = Vector2(104, -6)

[node name="Camera2D" type="Camera2D" parent="world_2D/Player"]
position = Vector2(0, -16)
zoom = Vector2(6, 6)

[node name="world_ui" type="Node" parent="."]

[node name="Cupboard" parent="world_ui" instance=ExtResource("10_lyenv")]
position = Vector2(-704, 196)

[node name="Fishing" parent="world_ui" instance=ExtResource("10_bu8ed")]

[editable path="world_2D/Inside"]
[editable path="world_2D/Inside/interactables/door_outside"]
[editable path="world_2D/Inside/interactables/door_storage"]
[editable path="world_2D/Inside/interactables/door_kitchen"]
[editable path="world_2D/Inside/interactables/door_bedroom"]
[editable path="world_2D/Outside"]
[editable path="world_2D/Outside/interactables/door_inside"]
[editable path="world_2D/Outside/interactables/game_fishing"]
[editable path="world_ui/Cupboard"]
[editable path="world_ui/Fishing"]
